--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <h2>Getting Started</h2>
             </div>
             <div class="card-body">
-                <h3 class="mt-lg">Important Information</h3>
-                <p>When submitting a report through Elker:</p>
+                <h3 class="mt-lg">When submitting a report through Elker:</h3>
                 <ul style="margin-left: var(--spacing-xl); margin-bottom: var(--spacing-md);">
                     <li>Your data is protected throughout the process</li>
                     <li>All communications are encrypted and secure</li>
